// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration::setup-authenticator-app should return error when csrf not present 1`] = `
Object {
  "contentId": "",
  "taxonomyLevel1": "",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::setup-authenticator-app should return setup authenticator app page 1`] = `
Object {
  "contentId": "5bc82db9-2012-44bf-9a7d-34d1d22fb035",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "create account",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::setup-authenticator-app should return validation error when access code is too long (more than 6 digits) 1`] = `
Object {
  "contentId": "5bc82db9-2012-44bf-9a7d-34d1d22fb035",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::setup-authenticator-app should return validation error when access code not entered 1`] = `
Object {
  "contentId": "5bc82db9-2012-44bf-9a7d-34d1d22fb035",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;

exports[`Integration::setup-authenticator-app should return validation error when code has non-digit characters 1`] = `
Object {
  "contentId": "5bc82db9-2012-44bf-9a7d-34d1d22fb035",
  "taxonomyLevel1": "authentication",
  "taxonomyLevel2": "",
  "taxonomyLevel3": "",
  "taxonomyLevel4": "",
  "taxonomyLevel5": "",
}
`;
